testsuite/positive/Issue-git-0008.n
//REFERENCE: Issue-git-0008-lib.dll
using System.Console;

[AddProperty(Prop1)]
module Program2
{
  Main() : void
  {
    Prop1 = "OK";

    WriteLine(Prop1);
  }
}
