testsuite/negative/nested-def.n
module Foo {
  foo ['a] (_ : 'a) : void {}
  Main () : void
  {
    foo (mutable x = 3); // OK
    x = 7; // E: unbound name
  }
}
